// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17rem;
  height: 4rem;
  color: #ffffff;
  border-radius: 0.5rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c1:hover {
  background: #232426;
}

.c1 g {
  fill: #ffffff;
}

.c0 {
  position: relative;
  z-index: 0;
}

.c2 {
  position: absolute;
  list-style-type: none;
  padding: 1.4rem 0;
  background-color: #ffffff;
  border-radius: 0.2rem 0.2rem;
  box-shadow: 0 1rem 5.5rem -0.5rem rgba(188,188,188,0.5);
  min-width: 17rem;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
  right: 0;
  top: 100%;
  margin-top: 1rem;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      size="2"
      type="button"
    />
    <ul
      class="c2"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
.c2 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.2;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c6 svg {
  width: 100%;
  height: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 3rem;
  padding: 0.8rem;
  border: none;
  border-radius: 0.2rem;
  font-weight: 400;
  width: 100%;
}

.c5:hover {
  background-color: #f4f5f6;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17rem;
  height: 4rem;
  color: #ffffff;
  border-radius: 0.5rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c1:hover {
  background: #232426;
}

.c1 g {
  fill: #ffffff;
}

.c7 {
  margin: 0 0.8rem 0 0;
}

.c3 {
  white-space: nowrap;
}

.c0 {
  position: relative;
  z-index: 3;
}

.c4 {
  position: absolute;
  list-style-type: none;
  padding: 1.4rem 0;
  background-color: #ffffff;
  border-radius: 0.2rem 0.2rem;
  box-shadow: 0 1rem 5.5rem -0.5rem rgba(188,188,188,0.5);
  min-width: 17rem;
  pointer-events: auto;
  opacity: 1;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
  right: 0;
  top: 100%;
  margin-top: 1rem;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      size="2"
      type="button"
    >
      <p
        class="c2 c3"
      >
        Example
      </p>
    </button>
    <ul
      class="c4"
      data-testid="dropdown"
    >
      <a
        class="c5"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <i
          class="c6 c7"
          data-testid="icon-Upload"
          height="2.8"
          width="2.8"
        >
          <test-file-stub
            image="test-file-stub"
          />
        </i>
        <p
          class="c2 c3"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
